--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
@@ -12,40 +12,164 @@
 <body>
   <div class="wrapper">
     <header>
+      <div id="#top"></div>
     </header>
     <main>
       <div class="block">
+        <h1>Lessons_6</h1>
         <div class="blockBold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur eius quod quas
           molestiae quidem omnis veniam porro, dolores at unde.</div>
         <div class="blockOpasity">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae corrupti ratione sed
           earum eveniet ducimus voluptatem. Illum corporis sequi exercitationem.</div>
-        <span class="blockSpan">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
-          laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum ducimus
-          ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
-          perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+        <div class="blockOpasity1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae corrupti ratione sed
+          earum eveniet ducimus voluptatem. Illum corporis sequi exercitationem.</div>
+        <div class="blockOpasity2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae corrupti ratione sed
+          earum eveniet ducimus voluptatem. Illum corporis sequi exercitationem.</div>
+        <div class="blockSpanMain">
+          <span class="blockSpan">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
+            laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum
+            ducimus
+            ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
+            perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+          <span class="blockSpan1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
+            laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum
+            ducimus
+            ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
+            perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+          <span class="blockSpan1">Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
+            laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum
+            ducimus
+            ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
+            perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+          <span class="blockSpan1">Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
+            laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum
+            ducimus
+            ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
+            perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+          <span class="blockSpan1">Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Rem ea illo ex accusantium,
+            laudantium neque ad earum tempore doloribus officia nobis quidem explicabo voluptatum ipsa, vel harum
+            ducimus
+            ullam, cumque sequi odio reiciendis similique assumenda! Commodi ipsum autem doloremque obcaecati fuga sequi
+            perspiciatis tenetur consequatur blanditiis, delectus ut, eligendi at!</span>
+        </div>
         <div class="blockLine">
           <p class="blocklinedouble"><a target="_blank" href="https://www.google.com.ua/">Lorem ipsum dolor sit</a>,
             amet consectetur adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
             distinctio unde veniam praesentium earum nisi animi blanditiis!</p>
-          <p class="blocklinesolid"><span>Lorem ipsum dolor sit</span>, amet consectetur adipisicing elit. Error a, quae
+          <p class="blocklinesolid"><span>Lorem ipsum dolor sit</span>, Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!amet consectetur adipisicing elit. Error a,
+            quae
             esse
             distinctio unde veniam praesentium earum nisi animi blanditiis!</p>
-          <p class="blocklinedashed">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error a, quae esse
+          <p class="blocklinedashed"><a target="_blank" href="https://www.google.com.ua/">Lorem ipsum dolor sit</a>,
+            amet consectetur adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
             distinctio unde veniam praesentium earum nisi animi blanditiis!</p>
           <p class="blocklinedotte">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
+            distinctio unde veniam praesentium earum nisi animi blanditiis!Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Error a, quae esse
             distinctio unde veniam praesentium earum nisi animi blanditiis!</p>
         </div>
         <div class="transparent">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione consequatur
-          recusandae sequi! Quam optio distinctio illo reiciendis sed et voluptatem.</div>
-        <span class="transprent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia natus perferendis
+          recusandae sequi! Quam optio distinctio illo reiciendis sed et voluptatem.Quam optio distinctio illo
+          reiciendis sed et voluptatem.</div>
+        <span class="transparentSpan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia natus perferendis
           commodi earum quaerat porro nisi itaque ut tempore deserunt.</span>
-        <img class="fox" src="img/fox.jfif" width="275" alt="Лисиця">
-        <img class="mushroom" src="img/mushroom.jfif" width="275" alt="Грибочки">
-        <img class="squirrel" src="img/squirrel.jfif" width="275" alt="Білка">
-        <img class="blackSquirrel" src="img/squirrel_black.jfif" width="275" alt="Чорна білка">
+        <div class="image">
+          <img class="fox" src="img/fox.jfif" width="275" alt="Лисиця">
+          <img class="mushroom" src="img/mushroom.jfif" width="275" alt="Грибочки">
+          <img class="squirrel" src="img/squirrel.jfif" width="275" alt="Білка">
+          <img class="blackSquirrel" src="img/squirrel_black.jfif" width="275" alt="Чорна білка">
+        </div>
+        <div class="border">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi eveniet iste expedita eum officiis commodi
+          dolorem quidem odio ad, eaque veniam dolor doloremque, impedit minima, voluptatum debitis quo dignissimos
+          soluta!</div>
+        <div class="paragraph">
+          <p class="paragraphText1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, debitis excepturi
+            pariatur
+            necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="paragraphText2"><a target="_blank" href="https://www.google.com.ua/">Lorem ipsum dolor sit amet
+              consectetur</a>, adipisicing elit. Aliquam, debitis excepturi
+            pariatur
+            necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="paragraphText3"><a target="_blank" href="https://www.google.com.ua/">Lorem ipsum dolor sit amet
+              consectetur</a>, adipisicing elit. Aliquam, debitis excepturi
+            pariatur
+            necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="paragraphText4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, debitis excepturi
+            pariatur
+            necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+        </div>
+        <div class="Text">
+          <p class="Text1">necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus
+            magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="Text2">
+            necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="Text3">necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus
+            magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+          <p class="Text4">necessitatibus beatae ab similique corrupti minima, blanditiis nostrum deserunt delectus
+            magni minus
+            reiciendis eligendi rem incidunt numquam quia.</p>
+        </div>
+        <div>
+          <h2 class="fls">home fls</h2>
+          <div class="circle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quis magnam error
+            dolores est
+            molestias, neque dicta vel minus dolorem, voluptatum eveniet! Officiis laborum voluptatum expedita
+            asperiores molestias aliquam quis aliquid hic culpa. Saepe ipsum est inventore sequi eaque expedita nisi
+            quibusdam libero impedit sunt eum, sit voluptatem quasi vel.</div>
+        </div>
+        <div class="opacity">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quis magnam error dolores est
+            molestias, neque dicta vel minus dolorem, voluptatum eveniet! Officiis laborum voluptatum expedita
+            asperiores molestias aliquam quis aliquid hic culpa. Saepe ipsum est inventore sequi eaque expedita nisi
+            quibusdam libero impedit sunt eum, sit voluptatem quasi vel.</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quis magnam error dolores est
+            molestias, neque dicta vel minus dolorem, voluptatum eveniet! Officiis laborum voluptatum expedita
+            asperiores molestias aliquam quis aliquid hic culpa. Saepe ipsum est inventore sequi eaque expedita nisi
+            quibusdam libero impedit sunt eum, sit voluptatem quasi vel.</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente quis magnam error dolores est
+            molestias, neque dicta vel minus dolorem, voluptatum eveniet! Officiis laborum voluptatum expedita
+            asperiores molestias aliquam quis aliquid hic culpa. Saepe ipsum est inventore sequi eaque expedita nisi
+            quibusdam libero impedit sunt eum, sit voluptatem quasi vel.</p>
+        </div>
+        <span class="spanSpan">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum ullam dolores odio,
+          inventore a quae ab
+          enim ratione nostrum dolorem facilis praesentium, pariatur eos aperiam velit. Accusamus rerum hic
+          possimus.</span>
+        <div class="different">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente voluptas veniam
+          delectus velit iusto totam dolorem itaque natus atque aperiam perferendis dolores non asperiores expedita,
+          nostrum vero commodi sit quibusdam!</div>
+        <div><a class="link" target="_blank" href="https://www.google.com.ua/">I'm liiiiiiinkkkkkk</a></div>
       </div>
     </main>
     <footer>
+      <div><a href="#top">to the beginning</a></div>
     </footer>
   </div>
 </body>
